# tom-v3-simple

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/: README.md  __init__.py
docs/: ARCHITECTURE.md  BLUEPRINT_PROGRESS.md  BLUEPRINT_STATUS.md  COMPLETION_CHECKLIST.md  CONTROL_ROOM.md  CONTROL_ROOM_INDEX.md  CURRENT_STATE.md  EXPORTS.md  IMPLEMENTATION_LOG.md  KNOWN_LIMITATIONS.md  OBSERVATION_CONTRACT.md  OPTIONAL_YOLO.md  PROVENANCE_AUDIT.md  REPLAY_WORKSTATION.md  RUNBOOK_LOCAL.md
migrations/: README.md  env.py
scripts/: post_codex_validate.sh  smoke_real_yolo_local.py  smoke_synthetic_viewer_data.py
tests/: README.md  test_backend_api.py  test_ball_court_trajectory.py  test_ball_trajectory_3d_candidates.py  test_blueprint_2_invariants.py  test_calibration_candidate_config_freeze.py  test_calibration_candidate_decision_packet.py  test_camera_geometry_calibration_provenance.py  test_camera_geometry_evidence.py  test_camera_view_evidence.py  test_completion_audit.py  test_controlled_runtime_calibration_application_execution.py  test_controlled_runtime_calibration_application_execution_review_packet.py  test_controlled_runtime_calibration_application_plan.py  test_controlled_runtime_calibration_blocked_execution_resolution_packet.py  test_controlled_runtime_calibration_blocked_pathway_phase_freeze.py  test_controlled_runtime_calibration_change_request.py  test_controlled_runtime_calibration_dry_run_execution.py  test_controlled_runtime_calibration_dry_run_review_packet.py  test_court_observation_persistence.py  (+90 more)
(+769 files in other folders)
