[project]
name = "tom-v3-simple"
version = "0.0.0"
description = "Observation-only tennis video evidence platform foundation."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "fastapi>=0.115,<1",
  "pydantic>=2.7,<3",
  "psycopg[binary]>=3.2,<4",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.2,<9",
  "ruff>=0.6,<1",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "apps",
  "apps.api",
  "apps.api.routers",
  "apps.api.services",
  "apps.worker",
  "apps.worker.pipelines",
  "apps.worker.scenarios",
  "apps.worker.services",
  "tom_v3_schema",
  "tom_v3_storage",
  "tom_v3_observations",
  "tom_v3_video",
]

[tool.setuptools.package-dir]
apps = "apps"
tom_v3_schema = "packages/schema/tom_v3_schema"
tom_v3_storage = "packages/storage/tom_v3_storage"
tom_v3_observations = "packages/observations/tom_v3_observations"
tom_v3_video = "packages/video/tom_v3_video"

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "apps/api",
  "packages/schema",
  "packages/storage",
  "packages/observations",
  "packages/video",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
